tests/ui/ast_literal_from_term.stderr
error[E0506]: cannot assign to `term` because it is borrowed
 --> $DIR/ast_literal_from_term.rs:8:5
  |
6 |     let lit = ast::Literal::from_term(ast::Sign::NoSign, &term);
  |                                                          ----- borrow of `term` occurs here
7 |     
8 |     term = ast::Term::from(sym);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `term` occurs here
9 |     let _end = (lit,term);
  |                 --- borrow later used here
